--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="txt_btn_enviar_dinamico">Enviar dinâmico</string>
     <string name="txt_btn_service">Service</string>
     <string name="txt_btn_bind_service">Bind service</string>
+    <string name="txt_btn_agendar">Agendar</string>
+    <string name="txt_btn_repetir">Repetir</string>
+    <string name="txt_btn_cancelar">Cancelar</string>
 </resources>
