--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="txt_btn_agendar">Agendar</string>
     <string name="txt_btn_repetir">Repetir</string>
     <string name="txt_btn_cancelar">Cancelar</string>
+    <string name="txt_btn_exibir">Exibir</string>
+    <string name="txt_titulo_download">Clique para carregar a imagem</string>
 </resources>
