--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">AndroidIntermediario</string>
+    <string name="app_name">Livros</string>
+    <string name="titulo1">Livros</string>
+    <string name="labelInserir">Novo</string>
+    <string name="branco"></string>
+    <string name="titulo3">Dados do livro:</string>
+    <string name="labelTitulo">Título:</string>
+    <string name="labelAutor">Autor:</string>
+    <string name="botaoSalvar">Salvar</string>
+    <string name="labelId">Id:</string>
+    <string name="botaoAlterar">Alterar</string>
+    <string name="botaoExcluir">Excluir</string>
 </resources>
